<?xml version="1.0"?>
<package>
	<name>neurobots_prm_planner_problems</name>
	<version>0.0.0</version>
	<description>The neurobots_prm_planner_problems package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example: -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="kuhnerd@todo.todo">kuhnerd</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!-- BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>


	<!-- Url tags are optional, but mutiple are allowed, one per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- Example: -->
	<!-- <url type="website">http://wiki.ros.org/neurobots_prm_planner_problems</url> -->


	<!-- Author tags are optional, mutiple are allowed, one per tag -->
	<!-- Authors do not have to be maintianers, but could be -->
	<!-- Example: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->


	<!-- The *_depend tags are used to specify dependencies -->
	<!-- Dependencies can be catkin packages or system dependencies -->
	<!-- Examples: -->
	<!-- Use build_depend for packages you need at compile time: -->
	<!-- <build_depend>message_generation</build_depend> -->
	<!-- Use buildtool_depend for build tool packages: -->
	<!-- <buildtool_depend>catkin</buildtool_depend> -->
	<!-- Use run_depend for packages you need at runtime: -->
	<!-- <run_depend>message_runtime</run_depend> -->
	<!-- Use test_depend for packages you need only for testing: -->
	<!-- <test_depend>gtest</test_depend> -->
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>

	<!-- We need to specify prm_planner here because of the plugin description.
	However you should still be able to build the workspace without having
	prm_planner in your path -->
	<build_depend>prm_planner</build_depend>
	<run_depend>prm_planner</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<prm_planner plugin="${prefix}/neurobots_prm_planner_problems_plugin.xml" />
	</export>
</package>
