<?xml version="1.0"?>
<package>
  <name>sdh2_hand</name>
  <version>0.0.0</version>
  <description>The sdh2_hand package</description>

  <maintainer email="kuhnera@informatik.uni-freiburg.de">Andreas Kuhner</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
	
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
