<?xml version="1.0"?>
<package>
  <name>omnirob_java_controller</name>
  <version>0.0.0</version>
  <description>The omnirob_java_controller package</description>

  <maintainer email="kuhnera@informatik.uni-freiburg.de">Andreas Kuhner</maintainer>
  <license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
</package>
